<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>livox_camera_calib</name>
  <version>1.0.0</version>
  <description>The livox_camera_calib package for ROS2</description>

  <maintainer email="ycj1@hku.hk">ycj</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>libpcl-all-dev</depend>
  <depend>livox_ros_driver</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
